# CudaPractice

./: CMakeLists.txt  CMakelists.txt  test1.cu  test2.cu
BFS/: CMakeLists.txt
BFS/include/: graph.h
BFS/src/: graph.cpp  testbfs.cpp
PR/: CMakeLists.txt
PR/include/: graph.h
PR/src/: graph.cpp  graph.cu  pr.cu
SSSP/: CMakeLists.txt
SSSP/include/: graph.h
SSSP/src/: graph.cpp  graph.cu  sssp.cu
WCC/include/: graph.h
WCC/src/: wcc.cu
src/: bfs.cu  graph.cpp  testBFS.cpp
